--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "sass": "1.32.8",
         "styled-components": "^5.2.1",
         "web-vitals": "^1.1.0",
-        "yup": "^0.32.9"
+        "yup": "^0.32.9",
+        "react-chartjs-2": "2.9.0"
     },
     "scripts": {
         "start": "react-scripts start",
