--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "styled-components": "^5.2.1",
         "web-vitals": "^1.1.0",
         "yup": "^0.32.9",
+        "chart.js": "2.9.3",
         "react-chartjs-2": "2.9.0"
     },
     "scripts": {
