--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-select": "^5.6.0",
+        "react-wordcloud": "^1.2.7",
         "redux": "^4.0.5",
         "redux-form": "^8.3.7",
         "redux-persist": "^6.0.0",
