--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "axios": "^0.21.1",
         "axios-mock-adapter": "^1.19.0",
         "bootstrap": "^4.6.0",
+        "chart.js": "2.9.3",
+        "d3-time-format": "^4.1.0",
         "formik": "^2.2.6",
         "history": "^5.0.0",
         "install": "^0.13.0",
@@ -26,6 +28,7 @@
         "react-app-polyfill": "^2.0.0",
         "react-bootstrap": "^1.5.2",
         "react-bootstrap4-form-validation": "^1.0.10",
+        "react-chartjs-2": "2.9.0",
         "react-copy-to-clipboard": "^5.0.3",
         "react-dom": "^17.0.1",
         "react-google-maps": "^9.4.5",
@@ -42,9 +45,7 @@
         "sass": "1.32.8",
         "styled-components": "^5.2.1",
         "web-vitals": "^1.1.0",
-        "yup": "^0.32.9",
-        "chart.js": "2.9.3",
-        "react-chartjs-2": "2.9.0"
+        "yup": "^0.32.9"
     },
     "scripts": {
         "start": "react-scripts start",
